--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="JS/home.js"></script>
     <title>Hive Mind</title>
 
+    <meta name="rating" content="General">
+    <script src="JS/stprage.js"></script>
+    <link rel="stylesheet" href="CSS/storeage.css">
+
+
 </head>
 
 <body>
@@ -65,7 +70,7 @@
                     } 
                 </script>
                 <!-- End Sign up form-->
-                <a href="#"> <img src="img/buttons/cart.png" alt="cart png"></a>
+                <a href="cart.html"> <img src="img/buttons/cart.png" alt="cart png"></a>
             </div>
         </section>
         <hr>
