--- a/cart.html
+++ b/cart.html
@@ -88,7 +88,15 @@
             </div>
 
             <div class="image">
-                <img src="img/" alt="">
+                <img src="img/thumbnails/ari-spadaSm.jpg" alt=""  />
+            </div>
+            <div class="description">
+                <span>Double Chocolate</span>
+                <span> Muffins</span>
+            </div>
+
+            <div class="quantity">
+                <button class="plus-btn" type="button" name="button"> </button>
             </div>
         </div>
 
